...
        if self.isLastQuestion() {
            statisticService!.store(correct: correctAnswers, total: self.questionsAmount)
            let alertPresenter = AlertPresenter(delegate: viewController!)
            let alertModel = AlertModel(title: "Этот раунд окончен",
                                        message: resultMessage,
                                        buttonText: "Сыграть еще раз?",
                                        id: "GameResults",
                                        completion: {
                self.restartGame()
                self.correctAnswers = 0
                self.questionFactory?.requestNextQuestion()
            }
            )
...
